--- a/currenttime/time.html
+++ b/currenttime/time.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <script></script>
 var today = new Date();
 var day = today.getDay();
 var daylist = ["Sunday","Monday","Tuesday","Wednesday ","Thursday","Friday","Saturday"];
@@ -43,7 +44,7 @@ prepand=' AM';
 }
 }
 console.log("Current Time : "+hour + prepand + " : " + minute + " : " + second);
-
+</script>
 
 </body>
 
